--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,3 +1,8 @@
+.login{
+    height: 100vh;
+    background-image: linear-gradient(45deg,grey 30%,black);
+    color: grey;
+}
 .positive{
     color: greenyellow;
 }
@@ -6,7 +11,29 @@
     color: red;
 }
 
+.image-container{
+    width: 100%;
+    height: 28vh;
+    margin-top: 20vh;
+}
+
+.centered{
+width: 100%;
+position: absolute;
+top: 10%;
+left:50%;
+transform: translate(-50%, -50%)
+}
+
+
+.login-button{
+    margin-top: 4vh;
+    background-color: black;
+    box-shadow: 12px -8px 4px rgba(0,0,0,0.5);
+    border-radius: 3px;
+}
+
 .login-link{
     text-decoration: none;
-    color: black;
+    color: silver;
 }
