--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -3,6 +3,12 @@
     background-image: linear-gradient(45deg,grey 30%,black);
     color: grey;
 }
+
+.login-title{
+    color: white;
+    margin-top: 0;
+    padding-top:1vh;
+}
 .positive{
     color: greenyellow;
 }
@@ -14,20 +20,20 @@
 .image-container{
     width: 100%;
     height: 28vh;
-    margin-top: 20vh;
+    margin-top: 15vh;
 }
 
 .centered{
 width: 100%;
 position: absolute;
-top: 10%;
+/* top: 20%;
 left:50%;
-transform: translate(-50%, -50%)
+transform: translate(-50%, -50%) */
 }
 
 
 .login-button{
-    margin-top: 4vh;
+    margin-top: 4vh;    
     background-color: black;
     box-shadow: 12px -8px 4px rgba(0,0,0,0.5);
     border-radius: 3px;
@@ -36,4 +42,10 @@ transform: translate(-50%, -50%)
 .login-link{
     text-decoration: none;
     color: silver;
+}
+
+.login-footer{
+    margin-top: 5vh;
+    font-size: 8px;
+    color: black;
 }
