--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -3,8 +3,18 @@
     background-image: linear-gradient(45deg,grey 30%,black);
     color: silver;
 }
+
+/* .login-image{
+    background-image: url();
+    filter:blur(8px);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+
     .login-title{
-    color: white;
+    color: lightgray;
     margin-top: 0;
     padding-top:1vh;
 }
@@ -23,15 +33,16 @@
     margin-top: 5vh;
     }
 
-/* .centered{
+.centered{
+    width: 92.5%;
     margin-top: 10vh;
     color: white;
-    padding: 0 10vw 0 10vw;
-    } */
+    /* padding: 0 10vw 0 10vw; */
+    }
     
 
 .login-button{
-    margin-top: 4vh;    
+    margin-top: 8vh;    
     background-color: black;
     box-shadow: 12px -8px 4px rgba(0,0,0,0.5);
     border-radius: 3px;
@@ -64,12 +75,12 @@
     }
 }
 
-@media(min-width:750px){
+@media(min-width:250px){
     .centered{
         width: 92.5%;
         margin-top: 15vh;
         font-size: 3vw;
-        /* padding: 0 7vw 0 7vw; */
+        /* padding: 0 10vw 0 10vw; */
         }
 }
 
