--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -3,20 +3,10 @@
     background-image: linear-gradient(45deg,grey 30%,black);
     color: silver;
 }
-
-/* .login-image{
-    background-image: url();
-    filter:blur(8px);
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
-
     .login-title{
     color: lightgray;
     margin-top: 0;
-    padding-top:1vh;
+    padding-top:3vh;
 }
 
 .positive{
@@ -31,14 +21,16 @@
     width: 100%;
     height: 28vh;
     margin-top: 5vh;
-    }
+}
+
 
 .centered{
     width: 92.5%;
-    margin-top: 10vh;
+    margin-top: 5vh;
     color: white;
     /* padding: 0 10vw 0 10vw; */
-    }
+}
+    
     
 
 .login-button{
@@ -75,12 +67,11 @@
     }
 }
 
-@media(min-width:250px){
+@media(min-width:750px){
     .centered{
         width: 92.5%;
         margin-top: 15vh;
         font-size: 3vw;
-        /* padding: 0 10vw 0 10vw; */
         }
 }
 
@@ -103,12 +94,7 @@
     width: 50%;
 }
 }
-/* @media(min-width:750px){
-    .container{
-        height: auto;     
-        margin: auto;
-    }
-} */
+
 @media(min-width:750px){
     .image-container{
     height: 34vh;    
@@ -119,7 +105,8 @@
     .login-button{
     top: 20%;    
     background-color: black;
-    box-shadow: 12px -8px 4px rgba(0,0,0,0.5);
+    /* box-shadow: none; */
+    box-shadow: 12px -8px 4px rgba(0,0,0,0.8);
     border-radius: 3px;
     height: 6vh;
     width: 9vw;
