--- a/src/components/Watchlist/Nonowned/nonowned.css
+++ b/src/components/Watchlist/Nonowned/nonowned.css
@@ -39,11 +39,6 @@
         border: 1px solid grey;
         color: lightgray;
     }
-
-    .nonowned-th2{
-        border: 1px solid grey;
-        color: lightgray;
-    }
    
     .nonowned-Td{
         border: 1px solid grey;
@@ -52,7 +47,7 @@
     
     .nonowned-table-positive{
         border: 1px solid grey;
-        color: yellowgreen;
+        color: rgb(0 202 0);
     }
     
     .nonowned-table-negative{
@@ -61,14 +56,16 @@
     }
 
     .nonowned-buy{
-        background-color: silver;
+        background-color: rgb(0 202 0);
         font-weight: 600;
+        border-radius: 3px;
     }
 
     .remove{
         margin-top: 2vw;
-        background-color: silver;
+        background-color: red;
         font-weight: 600;
+        border-radius: 3px;
     }
     
     .watchlist-footer{
@@ -157,8 +154,10 @@
 }
 
 .nonowned-buy{
-    background-color: silver;
-    font-weight: 600;
+    background-color: rgb(0 202 0);
+        font-weight: 600;
+        border-radius: 3px;
+        margin: 1vh 0 1vh 0;
 }
 .nonowned-buy:hover{
     cursor: pointer;
@@ -167,7 +166,7 @@
 }
 
 .remove{
-    background-color: silver;
+    background-color: red;
     font-weight: 600;
     margin-top: 0;
 }
