--- a/src/components/Watchlist/Pending/pending.css
+++ b/src/components/Watchlist/Pending/pending.css
@@ -1,40 +1,36 @@
-
-    .Watchlist{
+    /* .Watchlist{
         width: 100%;
         background-image: linear-gradient(0deg,grey 25%,black);
+    } */
+
+    .pending-purchase-title{
+        color: silver;
+    }
+
+    .pending-sales-title{
+        color: silver;
+    }
+
+    .pending-table{
+        margin-top:2vh;
     }
     
-    
-    .owned-table{
-        border: 1px solid ;
-        margin:auto;
-    }
-    
-    .owned-th{
+    .pending-th{
         border: 1px solid grey;
         color: lightgray;
     }
    
-    .owned-Td{
+    .pending-td{
         border: 1px solid grey;
         color: white;
     }
     
-    .owned-table-positive{
-        border: 1px solid grey;
-        color: rgb(0 202 0);
-    }
-    
-    .owned-table-negative{
-        border: 1px solid grey;
-        color: red;
-    }
-
-    .buy-sell-button{
-        background-color: rgb(0 202 0);
+    .pending-cancel-button{
+        background-color: red;
+        font-weight: 600;
         border-radius: 3px;
     }
-    
+
     .watchlist-footer{
         margin-top:12%;
         font-size: 2vh;
@@ -48,41 +44,34 @@
     background-image: linear-gradient(355deg,grey 30%,black);
 }
 
-.owned-table{
+.pending-table{
     width:92.5%;
     border: 1px solid grey;
     margin:auto;
+    table-layout: fixed;
 }
 
-.owned-th{
-    width: 1vw;
+.pending-th{
+    /* width: 1vw; */
     border: 1px solid grey;
     color: lightgray;
 }
 
-.owned-td{
-    width: 1vw;
+.pending-td{
+    /* width: 1vw; */
     border: 1px solid grey;
     color: white;
 }
 
-.owned-table-positive{
-    border: 1px solid grey;
-    color: yellowgreen;
-}
-
-.owned-table-negative{
-    border: 1px solid grey;
-    color: red;
-}
-
-.buy-sell-button{
-    background-color: rgb(0 202 0);
-    border-radius: 3px;
+.pending-cancel-button{
+    background-color: red;
+    font-weight: 600;
     margin: 1vh 0 1vh 0;
+    border-radius: 3px;
+
 }
 
-.buy-sell-button:hover{
+.pending-cancel-button:hover{
     cursor: pointer;
 }
 
