--- a/src/components/Watchlist/watchlist.css
+++ b/src/components/Watchlist/watchlist.css
@@ -7,10 +7,8 @@
     .watchlist-heading{
         padding-top: .25vh;
         padding-bottom: .1vh;
-        background-image: linear-gradient(180deg,grey 15%,black);  
-        /* color: rgba(255, 0, 0, 0.616);         */
+        background-image: linear-gradient(180deg,grey 15%,black); 
         color: silver;
-        /* color: rgb(0 202 0); */
         text-shadow: 2px 2px black;
         }
 
@@ -18,15 +16,27 @@
             background-color: black;
         }
 
-        .tab-button.active{
+        .active-tab{
             background-color: black;
             color: white;
         }
 
-/* @media(min-width:750px){
-.watchlist-heading{
-    background-image: linear-gradient(90deg, rgb(121, 2, 2),black 50%, rgb(0 110 0));   
-    color: silver;
+@media(min-width:750px){
+    .tabs{
+            background-color: black;
+            display: flex;
+            margin-left: 3.75vw;
+        }
+    .tab-button{
+        border-radius: 2px;
+        background-color: silver;
     }
-} */
+    .tab-button:hover, .tab-button:active, .tab-button:focus{
+        cursor: pointer;
+        background-color: black;
+        color: white;
+    }
+
+    }
+
 
