--- a/src/components/Watchlist/Nonowned/nonowned.css
+++ b/src/components/Watchlist/Nonowned/nonowned.css
@@ -72,6 +72,12 @@
         margin-top:12%;
         font-size: 2vh;
     } 
+
+    .trade-owned{
+        margin:auto;
+        background-color: lightgray;
+        color: black;
+    }
         
 /* ***@media(min-width: 750px)*** */
 @media(min-width:750px){
@@ -179,5 +185,11 @@
 
 .watchlist-footer{
     margin-top:29%;
+}
+
+.trade-nonowned{
+    margin:auto;
+    background-color: lightgray;
+    color: black;
 }
 } 
