--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -65,7 +65,7 @@
         }
 
     .login-image{
-        background-image: url('https://mylifeasjulia945.files.wordpress.com/2017/05/0218171041b-1.jpg');
+        background-image: url('https://s3-us-west-1.amazonaws.com/tradingwheelsinvestments/Bull.jpg');
         filter:blur(8px);
         height: 100%;
         background-position: center;
