--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -47,7 +47,7 @@
 .logout-button{
     height: 3vh;
     width: 5vw;
-    margin: 1.75vh 1vh 0 0;
+    margin: 2vh 3vw 0 0;
     background-color: silver;
     font-weight: 700;
     border-radius: 3px;
