--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -9,47 +9,47 @@
 .navbar-title{
     margin: 1vh 2vw 1vh 2vw;
     text-shadow: 2px 2px black;
-    /* text-shadow: 2px 2px #ff0000; */
     font-size: 4vh;
     word-wrap:break-word;
-    color: rgb(0 202 0)
-    /* color: silver; */
+    color: rgb(0 202 0);
 }
 
 .logout-button{
     height: 4vh;
-    margin: 1.75vh 1vw 0 0;
+    margin: 1.75vh 2vw 0 0;
     background-color: silver;
     font-weight: 700;
-    border-radius: 3px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: black;
+    border: solid gray;
+    box-shadow: 4px -5px rgba(0,0,0,0.8); 
 }
 
 @media(min-width:750px){
-
-
-.logout-button:hover{
-    cursor: pointer;
-}
-.Navbar{
-    display: flex;
-    justify-content: space-between;
-    background-image: linear-gradient(0deg,grey 10%,black);
-    height: 4vh;
-}
-
-.navbar-title{
-    margin: 1vh 0 1vh 2vw;
-    font-size: 4vh;
-    word-wrap:break-word;
-    color: rgb(0 202 0)
-}
-
-.logout-button{
-    height: 3vh;
-    width: 5vw;
-    margin: 2vh 3vw 0 0;
-    background-color: silver;
-    font-weight: 700;
-    border-radius: 3px;
-}
+    .Navbar{
+        display: flex;
+        justify-content: space-between;
+        background-image: linear-gradient(0deg,grey 10%,black);
+        height: 4vh;
+    }
+    
+    .navbar-title{
+        margin: 1vh 0 1vh 2vw;
+        font-size: 4vh;
+        word-wrap:break-word;
+        color: rgb(0 202 0)
+    }
+    
+    .logout-button{
+        height: 3vh;
+        width: 5vw;
+        margin: 2.5vh 3vw 0 0;
+        background-color: silver;
+        font-weight: 700;
+        border-radius: 3px;
+    }
+    .logout-button:hover{
+        cursor: pointer;
+    }
 }
