--- a/src/components/Watchlist/Owned/TradeOwned/TradeOwnedConfirmation/tradeownedconfirmation.css
+++ b/src/components/Watchlist/Owned/TradeOwned/TradeOwnedConfirmation/tradeownedconfirmation.css
@@ -1,20 +1,52 @@
 .trade-owned-confirm{
-    height: 150vh;    
+    height: 150vh; 
+    padding-top: 2vh;   
     background-image: linear-gradient(0deg,grey 10%,black);
     width: 100%;
     text-align: inherit;
 }
 
+ul.checkmark li:before{
+    background-color: rgb(0 202 0);
+    font-size: 25px;
+    content:'';
+    display: block;
+    border: solid .8em rgb(0 202 0); 
+    border-radius: 1000px;
+    height: 20%;
+    width: 35%;
+    position: absolute;
+    left: 28%;
+    top: 10%;
+    margin-top: -5vh;
+}
+
+ul.checkmark li:after{
+    content: '';
+    display: block;
+    width: 8vw;
+    height: 10vh;
+    border: solid white;
+    border-width: 0 1.5em 1.5em 0;
+    position: absolute;
+    left: 44%;
+    margin-top: 2%;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(49deg);
+}
+
 .confirm-statement{
     color: silver;
-    font-size: 5.5vh;
+    font-size: 3.5vh;
     margin: 0;
-    padding-top:15vh;
+    padding-top:25vh;
 }
 
 .homepage-link{
     font-size: 2.5vh;
-    color: rgb(0 202 0);
+    color: rgba(0 202 0);
 }
 
 @media(min-width:750px){
@@ -25,11 +57,42 @@
     width: 100%;
 }
 
+ul.checkmark li:before{
+    background-color: rgb(0 202 0);
+    font-size: 100px;
+    content:'';
+    display: block;
+    border: solid .8em rgb(0 202 0); 
+    border-radius: 1000px;
+    height: 30%;
+    width: 15%;
+    position: absolute;
+    left: 38%;
+    top: 10%;
+    margin-top: -3vh;
+}
+
+ul.checkmark li:after{
+    content: '';
+    display: block;
+    width: 12vw;
+    height: 14vh;
+    border: solid white;
+    border-width: 0 4em 4em 0;
+    position: absolute;
+    left: 42%;
+    margin-top: 6%;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(49deg);
+}
+
 .confirm-statement{
     color: silver;
-    font-size: 8vh;
-    margin: 0;
-    padding-top:15vh;
+    font-size: 5vh;
+    /* margin: 0; */
+    padding-top:55vh;
 }
 
 .homepage-link{
