--- a/src/components/Watchlist/Nonowned/TradeNonOwned/TradeNonOwnedConfirmation/tradenonownedconfirmation.css
+++ b/src/components/Watchlist/Nonowned/TradeNonOwned/TradeNonOwnedConfirmation/tradenonownedconfirmation.css
@@ -1,15 +1,47 @@
 .trade-nonowned-confirm{
     height: 150vh;    
+    padding-top: 2vh;
     background-image: linear-gradient(0deg,grey 10%,black);
     width: 100%;
     text-align: inherit;
 }
 
+ul.checkmark li:before{
+    background-color: rgb(0 202 0);
+    font-size: 25px;
+    content:'';
+    display: block;
+    border: solid .8em rgb(0 202 0); 
+    border-radius: 1000px;
+    height: 20%;
+    width: 35%;
+    position: absolute;
+    left: 28%;
+    top: 10%;
+    margin-top: -5vh;
+}
+
+ul.checkmark li:after{
+    content: '';
+    display: block;
+    width: 8vw;
+    height: 10vh;
+    border: solid white;
+    border-width: 0 1.5em 1.5em 0;
+    position: absolute;
+    left: 44%;
+    margin-top: 2%;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(49deg);
+}
+
 .confirm-statement-no{
     color: silver;
-    font-size: 5.5vh;
+    font-size: 3.5vh;
     margin: 0;
-    padding-top:15vh;
+    padding-top:25vh;
 }
 
 .stripe-nonowned{
@@ -56,12 +88,14 @@ ul.checkmark li:after{
 }
 .confirm-statement-no{
     color: silver;
-    font-size: 8vh;
+    font-size: 5vh;
     margin: 0;
-    padding-top:15vh;
+    padding-top:55vh;
 }
 
 .stripe-nonowned{
     margin-top: 6vh;
 }
 }
+
+/* circle w/checkmark info: https://boylesoftware.com/blog/css-checkmark-icon/ */
