--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -46,18 +46,81 @@
     color: black;
 }
 
-/* ****@media(min-width:750px)**** */
-
-@media(min-width:750px){
+/****@media(min-width:700px)****/
+@media(min-width:700px){
     .login-title{
-    color: white;
-    font-size: 4vw;
+    color:rgb(0 202 0);
+    text-shadow: 2px 2px black;
+    font-size: 6vw;
     }
 
     .centered{
         width: 92.5%;
         margin-top: 15vh;
         font-size: 3vw;
+        font-weight: 700;
+        }
+    .login-quote-titles{
+        
+        text-shadow: 2px 2px black;
+    }
+
+    .login-image{
+        background-image: url('https://s3-us-west-1.amazonaws.com/tradingwheelsinvestments/NYSE.jpg');
+        filter:blur(5px);
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+.login-content{
+    position: absolute;
+    top: 10%;
+    left: 25%;
+    width: 50%;
+}
+
+    .image-container{
+    height: 34vh;    
+    }
+
+    .login-button{
+    top: 20%;    
+    background-color: black;
+    box-shadow: 12px -8px 4px rgba(0,0,0,0.8);
+    border-radius: 3px;
+    height: 5vh;
+    width: 16vw;
+    font-size: 1vh;
+    font-weight: 700;
+    color:silver;
+    }
+
+    .login-button:hover{
+        cursor: pointer;
+    }
+
+    .login-footer{
+    margin-top: 5vh;
+    font-size: 12px;
+    color: white;
+    }
+}
+
+/* ****@media(min-width:800px)**** */
+
+@media(min-width:800px){
+    .login-title{
+    color: white;
+    font-size: 5vw;
+    }
+
+    .centered{
+        width: 92.5%;
+        margin-top: 15vh;
+        font-size: 3vw;
+        font-weight: 400;
         }
 
     .login-image{
