--- a/src/components/Watchlist/Nonowned/TradeNonOwned/TradeNonOwnedConfirmation/tradenonownedconfirmation.css
+++ b/src/components/Watchlist/Nonowned/TradeNonOwned/TradeNonOwnedConfirmation/tradenonownedconfirmation.css
@@ -48,7 +48,57 @@ ul.checkmark li:after{
     margin-top: 6vh;
 }
 
-@media(min-width:750px){
+@media(min-width:700px){
+.trade-nonowned-confirm{
+    text-align:inherit;
+    height: 178vh;    
+    background-image: linear-gradient(0deg,grey 30%,black);
+    width: 100%;
+}
+
+ul.checkmark li:before{
+    background-color: rgb(0 202 0);
+    font-size: 100px;
+    content:'';
+    display: block;
+    border: solid .8em rgb(0 202 0); 
+    border-radius: 1000px;
+    height: 15%;
+    width: 20%;
+    position: absolute;
+    left: 30%;
+    top: 10%;
+    margin-top: -3vh;
+}
+
+ul.checkmark li:after{
+    content: '';
+    display: block;
+    width: 8vw;
+    height: 16vh;
+    border: solid white;
+    border-width: 0 2.5em 2.5em 0;
+    position: absolute;
+    left: 43%;
+    margin-top: 6%;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.confirm-statement-no{
+    color: silver;
+    font-size: 5vh;
+    margin: 0;
+    padding-top:35vh;
+}
+
+.stripe-nonowned{
+    margin-top: 6vh;
+}
+}
+
+@media(min-width:800px){
 .trade-nonowned-confirm{
     text-align:inherit;
     height: 178vh;    
