--- a/src/components/Watchlist/Nonowned/nonowned.css
+++ b/src/components/Watchlist/Nonowned/nonowned.css
@@ -1,8 +1,9 @@
 
-    .Watchlist{
+    /* .Watchlist{
         width: 100%;
         background-image: linear-gradient(0deg,grey 25%,black);
-    }
+        height: 100%;
+    } */
     
     .nonowned-add{
         width:85%;
@@ -79,8 +80,120 @@
         color: black;
     }
         
-/* ***@media(min-width: 750px)*** */
-@media(min-width:750px){
+@media(min-width:700px){
+.Watchlist{
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(355deg,grey 30%,black);
+}
+
+.nonowned-add{
+    width:35%;
+    color: white;    
+    margin: 2vh 25vw 0 3.9vw;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    
+}
+
+.nonowned-add-company{
+    margin: 1vh 1vw 1vh 0;
+    background-color: whitesmoke;
+}
+
+.nonowned-add-symbol{
+    margin-right: 1vw;
+    background-color: whitesmoke;
+}
+
+.nonowned-add-button{
+    font-weight: 600;
+    width: 35%;
+    margin: auto;
+    background-color: silver;
+}
+.nonowned-add-button:hover{
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+.nonowned-table{
+    width:92.5%;
+    border: 1px solid grey;
+    margin:auto;
+    table-layout: fixed;
+}
+
+.nonowned-th{
+    width: 1vw;
+    border: 1px solid grey;
+    color: lightgray;
+}
+
+.nonowned-Td{
+    width: 1vw;
+    border: 1px solid grey;
+    color: white;
+}
+
+.nonowned-Td-remove{
+    width: 1vw;
+    border: 1px solid grey;
+    color: white;
+}
+.nonowned-Td-buy{
+    width: 1vw;
+    border: 1px solid grey;
+    color: white;
+}
+
+.nonowned-table-positive{
+    border: 1px solid grey;
+    color: yellowgreen;
+}
+
+.nonowned-table-negative{
+    border: 1px solid grey;
+    color: red;
+}
+
+.nonowned-buy{
+    background-color: rgb(0 202 0);
+        font-weight: 600;
+        border-radius: 3px;
+        margin: 1vh 0 1vh 0;
+}
+.nonowned-buy:hover{
+    cursor: pointer;
+    background-color: black;
+    color: white;
+}
+
+.remove{
+    background-color: red;
+    font-weight: 600;
+    margin-top: 0;
+}
+
+.remove:hover{
+    background-color: red;
+    color: white;
+    cursor: pointer;
+}
+
+.watchlist-footer{
+    margin-top:29%;
+}
+
+.trade-nonowned{
+    margin:auto;
+    background-color: lightgray;
+    color: black;
+}
+} 
+@media(min-width:800px){
 .Watchlist{
     height: 100vh;
     width: 100%;
