--- a/src/components/Watchlist/Owned/TradeOwned/TradeOwnedConfirmation/tradeownedconfirmation.css
+++ b/src/components/Watchlist/Owned/TradeOwned/TradeOwnedConfirmation/tradeownedconfirmation.css
@@ -39,7 +39,7 @@ ul.checkmark li:after{
 
 .confirm-statement{
     color: silver;
-    font-size: 3.5vh;
+    font-size: 3vh;
     margin: 0;
     padding-top:25vh;
 }
@@ -53,7 +53,62 @@ ul.checkmark li:after{
     margin-top: 6vh;
 }
 
-@media(min-width:750px){
+@media(min-width:700px){
+    .trade-owned-confirm{
+        text-align:inherit;
+        height: 178vh;    
+        background-image: linear-gradient(0deg,grey 30%,black);
+        width: 100%;
+    }
+    
+    ul.checkmark li:before{
+        background-color: rgb(0 202 0);
+        font-size: 50px;
+        content:'';
+        display: block;
+        border: solid .8em rgb(0 202 0); 
+        border-radius: 1000px;
+        height: 20%;
+        width: 10%;
+        position: absolute;
+        left: 38%;
+        top: 10%;
+        margin-top: -3vh;
+    }
+    
+    ul.checkmark li:after{
+        content: '';
+        display: block;
+        width: 6vw;
+        height: 24vh;
+        border: solid white;
+        border-width: 0 3.5em 3.5em 0;
+        position: absolute;
+        left: 45%;
+        margin-top: 3%;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+    
+    .confirm-statement{
+        color: silver;
+        font-size: 5vh;
+        padding-top:35vh;
+    }
+    
+    .homepage-link{
+        font-size: 3vh;
+        color: rgb(0 202 0);
+    }
+    
+    .stripe-owned{
+        margin-top: 6vh;
+    }
+    }
+
+@media(min-width:800px){
 .trade-owned-confirm{
     text-align:inherit;
     height: 178vh;    
